--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,7 @@ repos:
     hooks:
       - id: prettier
         types_or: [ html, css, javascript ]
+  - repo: https://github.com/crazybolillo/phpint
+    rev: v1.0.0
+    hooks:
+      - id: phpint
