--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -21,11 +21,33 @@ jobs:
       - uses: pre-commit/action@v3.0.0
   tests:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: root
+          POSTGRES_DB: laravel
+          POSTGRES_PASSWORD: reflovex
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v3
       - name: Setup
         uses: ./.github/setup
         with:
           cache-key: qa-tests
+      - name: Set env.testing
+        run: |
+          cp .env.example .env.testing
+          sed -i 's/\(DB_CONNECTION=\).*/\1postgresql/' .env.testing
+          sed -i 's/\(DB_PORT=\).*/\15432/' .env.testing
+          sed -i '/DB_PASSWORD=/ s/$/reflovex/' .env.testing
+          php artisan key:generate --env=testing
+          cat .env.testing
       - name: Run tests
         run: php artisan test
